// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render default as expected 1`] = `
<div>
  <div
    className="sc-htpNat ezHVmo"
  >
    <a
      className="sc-bdVaJa ddjIOj"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </div>
  I never really knew that she could dance like this
</div>
`;

exports[`Layout should render inverted as expected 1`] = `
<div>
  <div
    className="sc-htpNat hSsnMj"
  >
    <a
      className="sc-bdVaJa jUmgka"
      href="https://www.youtube.com/watch?v=DUT5rEU6pqM"
    >
      Say Hi
    </a>
  </div>
  She makes a man wants to speak Spanish
</div>
`;
